<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_16sdp"
    tools:context=".views.ProfileFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/loader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@color/final_color"
        android:padding="@dimen/_8sdp"
        android:text="AR"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:src="@drawable/ic_baseline_person_24" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_32sdp"
        android:hint="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/_16sdp"
        android:padding="@dimen/_8sdp"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        tools:text="@string/email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        android:layout_width="283dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/final_color"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete"
        android:layout_width="282dp"
        android:layout_height="47dp"
        android:layout_marginBottom="76dp"
        android:backgroundTint="@color/final_color"
        android:text="@string/delete_account"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>