<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_place"
        android:layout_width="267dp"
        android:layout_height="123dp"
        android:layout_margin="@dimen/_32sdp"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/appCompatRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:numStars="5"
        android:progress="5"
        android:progressTint="@color/golden"
        app:layout_constraintEnd_toEndOf="@+id/iv_place"
        app:layout_constraintStart_toStartOf="@+id/iv_place"
        app:layout_constraintTop_toBottomOf="@+id/iv_place"
        tools:ignore="SpeakableTextPresentCheck" />


    <Button
        android:id="@+id/btn_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:layout_marginTop="87dp"
        android:layout_marginBottom="89dp"
        android:backgroundTint="@color/final_color"
        android:text="@string/location"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="21dp"
        android:hint="@string/title"
        android:inputType="text"
        android:lines="4"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/et_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_location" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/description"
        android:inputType="text"
        android:lines="4"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_title" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="@dimen/_16sdp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="@color/final_color"
        android:textStyle="bold"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_description" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="370dp"
        android:layout_height="35dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="103dp"
        android:background="@color/blue_dark"
        android:backgroundTint="@color/final_color"
        android:entries="@array/filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatRatingBar"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>