<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".views.RegisterFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:elevation="10dp"
        android:background="@drawable/header_register"
        android:theme="@style/ToolbarTheme" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:elevation="10dp"
        android:text="@string/register_owner"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        android:textStyle="bold"
        android:transitionName="login" />

    <ImageView
        android:id="@+id/circle2"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-87dp"
        android:layout_marginBottom="-40dp"
        android:src="@drawable/circle" />

    <ImageView
        android:id="@+id/circleTes"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="-50dp"
        android:src="@drawable/circlet" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="386dp"
                    android:layout_height="516dp"
                    android:paddingBottom="35dp">

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/email"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvEmail"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:drawablePadding="30dp"
                        android:inputType="textEmailAddress"
                        android:padding="10dp" />


                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/email_et"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/username"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/username_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvUsername"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:drawablePadding="30dp"
                        android:inputType="text"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/tvPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/username_txt"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/password"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/pass_re"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvPassword"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:drawablePadding="30dp"
                        android:inputType="textPassword"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/tvRePassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pass_re"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/confirm_password"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/confierm_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvRePassword"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:drawablePadding="30dp"
                        android:inputType="textPassword"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/tvaddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/confierm_pass"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/address"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/addressET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvaddress"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:drawablePadding="30dp"
                        android:inputType="textPassword"
                        android:padding="10dp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/cv"
                android:layout_alignRight="@+id/cv"
                android:layout_alignBottom="@+id/cv"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginBottom="-20dp"
                android:elevation="10dp">

                <Button
                    android:id="@+id/regBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:backgroundTint="#C5A7FB"
                    android:text="@string/register"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>